# hepex-analysisops-agents

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  pyproject.toml
src/: agent.py  bundle_runtime.py  executor.py  server.py  solver_backends.py
src/agent_01_oh/: AGENTS.md  README.md
src/agent_02_scifi_oh/: AGENTS.md  README.md  __init__.py  loop.py  prompt_builder.py  review.py
src/agent_02_scifi_oh/skills/: bundle_contract_review.md  contract_driven_analysis.md  evidence_consistency.md  hyy_l1.md  hyy_l2_l3.md  mc_weighting.md  scientific_trace.md  vectorized_root_analysis.md
src/agent_03a_scifi_native/: AGENTS.md  README.md  __init__.py  loop.py  native_worker.py
src/agent_03b_scifi_native/: AGENTS.md  README.md  __init__.py  prompt_builder.py
src/agent_03c_scifi_native/: AGENTS.md  README.md  __init__.py  prompt_builder.py
src/tools/: data_tools.py
tests/: test_agent.py  test_green_to_white_integration.py  test_model_config.py  test_scifi_native_backend.py  test_scifi_oh_backend.py  test_submission_bundle_agent.py  test_tool_calling.py
