[project]
name = "hepex-analysisops-agents"
version = "0.1.0"
description = "HEPEx AnalysisOps Agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "google-adk>=1.22.0",
    "litellm>=1.76.0",
    "openai>=2.31.0",
    "scipy>=1.16.3",
    "uvicorn>=0.38.0",
    "uproot>=5.0.0",
    "awkward>=2.0.0",
    "vector>=1.7.0",
    "ipykernel>=7.1.0",
    "atlasopenmagic>=1.8.0",
    "matplotlib>=3.10.8",
    "mplhep>=1.1.2",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
    "xrootd>=6.0.0",
    "asteval>=1.0.8",
    "dill>=0.4.1",
    "lmfit>=1.3.4",
    "uncertainties>=3.2.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
